Switch ssl_x509.c to C++.
http://i1.kym-cdn.com/photos/images/original/000/242/631/382.gif

In the first step, switch C files to C++ individually, keeping
everything in internal.h C-compatible. We'll make minimal changes needed
to get things compiling (notably a lot of goto errs will need to turn to
bssl::UniquePtr right away), but more aggressive changes will happen in
later steps.

Bug: 132
Change-Id: Id4cfd722e7b57d1df11f27236b4658b5d39b5fd2

--- a/ssl/CMakeLists.txt
+++ b/ssl/CMakeLists.txt
@@ -30,7 +30,7 @@ add_library(
   ssl_stat.c
   ssl_transcript.c
   ssl_versions.c
-  ssl_x509.c
+  ssl_x509.cc
   t1_enc.c
   t1_lib.c
   tls_method.c
