Add bssl::SealRecord and bssl::OpenRecord.
This is a C++ interface for encrypting and decrypting TLS application
data records in-place, wrapping the existing C API in tls_record.cc.

Also add bssl::Span, a non-owning reference to a contiguous array of
elements which can be used as a common interface over contiguous
container types (like std::vector), pointer-length-pairs, arrays, etc.

Change-Id: Iaa2ca4957cde511cb734b997db38f54e103b0d92

--- a/ssl/CMakeLists.txt
+++ b/ssl/CMakeLists.txt
@@ -56,3 +56,15 @@ if (WIN32)
   target_link_libraries(ssl_test ws2_32)
 endif()
 add_dependencies(all_tests ssl_test)
+
+add_executable(
+  span_test
+
+  span_test.cc
+
+  $<TARGET_OBJECTS:gtest_main>
+)
+
+target_link_libraries(span_test ssl gtest)
+add_dependencies(all_tests span_test)
+
