Fix threads detection for CROS_EC/CROS_ZEPHYR
The CROS_EC and CROS_ZEPHYR platforms currently have threads disabled,
so we should not attempt to search for (or link) a threads library.

BUG=b/273639386

Change-Id: I094a989680160f9ecefbdb4cb3e94c4825a651e3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,6 +230,14 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_XOPEN_SOURCE=700")
 endif()
 
+if(CROS_EC)
+  add_definitions(-DCROS_EC)
+endif()
+
+if(CROS_ZEPHYR)
+  add_definitions(-DCROS_ZEPHYR)
+endif()
+
 if(FUZZ)
   if(NOT CLANG)
     message(FATAL_ERROR "You need to build with Clang for fuzzing to work")
