AES-GCM VAES + VPCLMULQDQ implementation
This change implements AES-GCM using VAES, VPCLMULQDQ and AVX512
instructions. The AES-128-GCM seal performance measured:

On AMD 9R14:

       |    16B   |    256B    |    1350B   |    8192B   |   16384B
-------+----------+------------+------------+------------+------------
master |192.5 MB/s| 1837.4 MB/s| 3641.5 MB/s| 4719.3 MB/s| 4847.0 MB/s
this   |180.0 MB/s| 2553.3 MB/s| 6132.1 MB/s|10778.7 MB/s|11330.7 MB/s
speedup|     0.94X|       1.39X|       1.68X|       2.28X|       2.34X

On Intel 8375C:

       |    16B   |    256B    |    1350B   |    8192B   |   16384B
-------+----------+------------+------------+------------+------------
master |186.5 MB/s| 1965.8 MB/s| 4370.6 MB/s| 6106.7 MB/s| 6338.5 MB/s
this   |162.1 MB/s| 2202.2 MB/s| 5752.0 MB/s|10582.6 MB/s|11244.4 MB/s
speedup|     0.87X|       1.12X|       1.32X|       1.73X|       1.77X

On Intel 8488C:
       |    16B   |    256B    |    1350B   |    8192B   |   16384B
-------+----------+------------+------------+------------+------------
master |204.6 MB/s| 2201.2 MB/s| 4681.2 MB/s| 6224.2 MB/s| 6639.7 MB/s
this   |190.2 MB/s| 2742.1 MB/s| 7734.8 MB/s|15565.1 MB/s|16717.6 MB/s
speedup|     0.93X|       1.25X|       1.65X|       2.50X|       2.52X

The performance was measured on cloud instances, so frequency scaling was on,
and there was some noise, still the figures are representative of the improvements.

In terms of size the code compiles into a ~9KiB object file with debug symbols,
or ~6KiB when debug symbols are stripped.

Change-Id: If82606f8d80cf5447ef4eef55c2fff95840448a3

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -20,6 +20,7 @@ set(
   ../third_party/fiat/asm/fiat_curve25519_adx_square.S
   ../third_party/fiat/asm/fiat_p256_adx_mul.S
   ../third_party/fiat/asm/fiat_p256_adx_sqr.S
+  fipsmodule/modes/asm/aes-gcm-avx512.S
 )
 perlasm(CRYPTO_SOURCES aarch64 chacha/chacha-armv8 chacha/asm/chacha-armv8.pl)
 perlasm(CRYPTO_SOURCES aarch64 cipher_extra/chacha20_poly1305_armv8 cipher_extra/asm/chacha20_poly1305_armv8.pl)
