--- a/util/doc.config
+++ b/util/doc.config
@@ -62,7 +62,8 @@
   },{
     "Name": "Experimental not yet standardized things. May not work in future!",
     "Headers": [
-      "include/openssl/experimental/kyber.h"
+      "include/openssl/experimental/kyber.h",
+      "include/openssl/experimental/spx.h"
     ]
   },{
     "Name": "SSL implementation",
